--- a/pokemon_entities/templates/pokemon.html
+++ b/pokemon_entities/templates/pokemon.html
@@ -64,7 +64,7 @@
             {% for element in pokemon.element_type%}
               <div>
                 <img class="pull-left mr-2 float-left" style="height:20px;width:20px;" src="{{element.img}}">
-                <p>{{element.title}}, силён против: {{element.strong_against|join:", "}}</p>
+                <p>{{element.title_ru}}, силён против: {{element.strong_against|join:", "}}</p>
               </div>
             {% endfor %}
           </div>
@@ -73,7 +73,7 @@
     </div>
 
 
-    <h1 class="mt-5 mb-2">Карта {{pokemon.title}} в Москве</h1>
+    <h1 class="mt-5 mb-2">Карта {{pokemon.title_ru}} в Москве</h1>
     <div class="mb-5">
       {{map|safe}}  
     </div>
